Fixed a gap issue in the footer and a width issue in the Take Action section.

--- a/style.css
+++ b/style.css
@@ -470,7 +470,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    width: 100%;
 }
 
 .name-input,
@@ -542,7 +542,6 @@ footer {
     background-color: #000;
     color: #fff;
     display: flex;
-    gap: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -551,6 +550,7 @@ footer {
 }
 
 .footer-content-wrapper {
+    gap: 1rem;
     align-items: center;
 }
 
